# Mini-PGW-Client-Server

./: CMakeLists.txt  README.md
configs/: server.json
src/: CMakeLists.txt  ConfigDirPath.h  Logger.cpp  Logger.h
src/client/: Core.cpp  Core.h  UdpClient.cpp  UdpClient.h  main.cpp
src/server/: Core.cpp  Core.h  HttpServer.cpp  HttpServer.h  ISessionManager.h  SessionManager.cpp  SessionManager.h  UdpServer.cpp  UdpServer.h  main.cpp
tests/: CMakeLists.txt  ConfigDirPathTest.cpp  LoggerTest.cpp
tests/server_test/: HttpServerTest.cpp  SessionManagerTest.cpp  UdpServerTest.cpp
